fix styling and scrollbar

--- a/portal/src/styles/inlineForm.css
+++ b/portal/src/styles/inlineForm.css
@@ -2,12 +2,12 @@
     width: auto;
     overflow-x: scroll;
     scrollbar-width: none;
+    -ms-overflow-style: none;
 
     .button {
         font-size: 0.875rem;
         line-height: 1.4286;
         font-family: monospace;
-        overflow-x: scroll;
     }
 
     .resizing-input {
@@ -34,4 +34,9 @@
         background-color: var(--bordered-hover-background-color);
         border-color: var(--bordered-hover-border-color);
     }
+}
+
+
+.inline-form::-webkit-scrollbar {
+    display: none;
 }
